crates/neenee-tui/src/snapshots/neenee_tui__question_model__tests__question_modal_film_single_select_jump.snap
---
source: crates/neenee-tui/src/question_model.rs
assertion_line: 1195
expression: film
---
=== open (first row highlighted = selected) ===




          Question

          Style
          Which error handling crate?

             anyhow
               Simple                                  ▼

          ↑↓ navigate  Enter submit  Esc cancel

=== down → highlight 'thiserror' (selected, no marker) ===




          Question

          Which error handling crate?                  ▲

             anyhow
               Simple
             thiserror                                 ▼

          ↑↓ navigate  Enter submit  Esc cancel

=== '3' → jump to 'Other' (now the live selection) ===




          Question

             anyhow                                    ▲
               Simple
             thiserror
               Structured
             Other

          ↑↓ navigate  Enter submit  Esc cancel
