crates/neenee-tui/src/snapshots/neenee_tui__question_model__tests__question_modal_film_two_question_header.snap
---
source: crates/neenee-tui/src/question_model.rs
assertion_line: 1241
expression: film
---
=== open: Question 1/2 ===




          Question 1/2

          first?

             x
             Other


          ↑↓ navigate  Enter next  Esc cancel

=== Enter → Question 2/2 ===




          Question 2/2

          second?

             y
             z
             Other

          ↑↓ navigate  Enter submit  Esc cancel

=== Shift+Tab → Question 1/2 ===




          Question 1/2

          first?

             x
             Other


          ↑↓ navigate  Enter next  Esc cancel
